--- a/onepage/index.html
+++ b/onepage/index.html
@@ -120,7 +120,7 @@
 <div id="section03">
 	<div class="row sec03-warp warp">
 		<div class="gallery">
-			<h1>gallery</h1>
+			<h1>갤러리</h1>
 		</div>
 		<div class="gallery-img">
 			<div class="gallery-warp">
@@ -139,44 +139,44 @@
 					</div>
 				</div>
 				<div class="gallery-row">
-					<div class="gallery-img1">
+					<div class="gallery-img5">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img2">
+					<div class="gallery-img6">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img3">
+					<div class="gallery-img7">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img4">
-						<div class="gallery-bg"></div>
-					</div>
-				</div>
-				<div class="gallery-row click-row">
-					<div class="gallery-img1">
-						<div class="gallery-bg"></div>
-					</div>
-					<div class="gallery-img2">
-						<div class="gallery-bg"></div>
-					</div>
-					<div class="gallery-img3">
-						<div class="gallery-bg"></div>
-					</div>
-					<div class="gallery-img4">
+					<div class="gallery-img8">
 						<div class="gallery-bg"></div>
 					</div>
 				</div>
 				<div class="gallery-row click-row">
-					<div class="gallery-img1">
+					<div class="gallery-img9">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img2">
+					<div class="gallery-img10">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img3">
+					<div class="gallery-img11">
 						<div class="gallery-bg"></div>
 					</div>
-					<div class="gallery-img4">
+					<div class="gallery-img12">
+						<div class="gallery-bg"></div>
+					</div>
+				</div>
+				<div class="gallery-row click-row">
+					<div class="gallery-img13">
+						<div class="gallery-bg"></div>
+					</div>
+					<div class="gallery-img14">
+						<div class="gallery-bg"></div>
+					</div>
+					<div class="gallery-img15">
+						<div class="gallery-bg"></div>
+					</div>
+					<div class="gallery-img16">
 						<div class="gallery-bg"></div>
 					</div>
 				</div>
@@ -188,7 +188,7 @@
 	</div>
 	<div class="click-btn">
 		<h1 class="pl">더보기</h1>
-		<h1 class="mi">승민이를 닫기</h1>
+		<h1 class="mi">닫기</h1>
 	</div>
 	<!-- sec03-warp  -->
 </div>
