--- a/onepage/index.html
+++ b/onepage/index.html
@@ -11,13 +11,14 @@
 </style>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/mastar.css">
+<link rel="stylesheet" href="css/fontawesome.css">
 </head>
 
 <body>
 <div id="section01">
     <div class="menu_box">
         <div class="logo"><a href="#section01"><img src="images/logo.png" alt=""></a></div>
-        <ul>
+        <ul class="nav">
             <li><a href="#section01">아트 빌리지</a></li>
             <li><a href="#section02">한옥마을</a></li>
             <li><a href="#section03">갤러리</a></li>
@@ -195,29 +196,40 @@
 
 <!-- section 03  -->
 <div id="section04">
-	<div class="row sec04-warp warp">
-		<div class="sec04-title">
-			<h1>공연&전시</h1>
-		</div>
-		<div class="sec04-row">
-			<div class="sec04-sub-txt01">
+	<h1 class="title4">공연 & 전시</h1>
+		<div class="page4">
+		<div class="show">
+			<div class="show-content">
 				<h1>_공연</h1>
-				<p>다목적 홀과 야외 공연장에서 공연이 진행되고
-					공연과 자연이 어우러져 문화예술을 즐길 수 있습니다.</p>
+				<p>다목적 홀과 야외 공연장에서 공연이 진행되고<br>공연과 자연이 어우러져 문화예술을 즐길 수 있습니다.</p>
 			</div>
-			<div class="sec04-sub-img01"></div>
+			<div class="show-img" data-aos="fade-left">
+				<div class="slide_box1">
+					<ul>
+						<li><a href="#"><img src="images/show4.jpg" alt=""></a></li>
+						<li><a href="#"><img src="images/show5.jpg" alt=""></a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="sec04-row flex">
-			<div class="sec04-sub-txt02">
-				<h1>_전시</h1>
-				<p>넉넉한 공간과 최신식 시설로 쾌적한 환경에서
-					전통에서 현대까지 다양한 전시품을 관람할 수 있습니다.</p>
+		<div class="view">
+			<div class="view-img" data-aos="fade-right">
+				<div class="slide_box2">
+					<ul>
+						<li><a href="#"><img src="images/show1.jpg" alt=""></a></li>
+						<li><a href="#"><img src="images/show2.jpg" alt=""></a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="sec04-sub-img02"></div>
-
+			<div class="view-content">
+				<h1>전시_</h1>
+				<p>넉넉한 공간과 최신식 시설로 쾌적한 환경에서<br>전통에서 현대까지 다양한 전시품을 관람할 수 있습니다.</p>
+			</div>
 		</div>
 	</div>
 </div>
-<div id="section05"></div>
+<div id="section05">
+	<div id="map" style="width:100%;height:350px;"></div>
+</div>
 </body>
 </html>
