--- a/onepage/index.html
+++ b/onepage/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>아트빌리지</title>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ba625bb90705a7a6a0175b21a86c3b"></script>
 <script src="http://code.jquery.com/jquery.min.js"></script>
 <script src="js/script.js"></script>
