--- a/onepage/index.html
+++ b/onepage/index.html
@@ -23,15 +23,17 @@
 	<header>
 		<div class="menu-box">			
 				<div class="menu">
-					<img class="menu-size" src="images/logo.png" alt="menu">
+					<img class="menu-size" src="images/button.png" alt="menu">
 				</div>	
 		</div>
 		<div class="menu-list">
 			<div class="menus">
 				<div class="menus-all text-center">
-					<a href="index.html">s</a>
-					<a href="port.html">PORTFOLIO</a>
-					<a href="about.html">ABOUT</a>
+					<a href="#section01">아트 빌리지</a>
+					<a href="#section02">한옥 마을</a>
+					<a href="#section03">갤러리</a>
+					<a href="#section04">전시&공연</a>
+					<a href="#section05">오시는 길</a>
 				</div>
 			</div>
 		</div>
