--- a/onepage/index.html
+++ b/onepage/index.html
@@ -40,16 +40,6 @@
 	</header>
 
 	<div id="section01">
-		<!-- <ul class="nav">
-			<li><a href="#section01">아트 빌리지</a></li>
-			<li><a href="#section02">한옥마을</a></li>
-			<li><a href="#section03">갤러리</a></li>
-			<li><a href="#section04">공연&전시</a></li>
-			<li><a href="#section05">오시는 길</a></li>
-		</ul> -->
-
-
-		<!-- menu  -->
 		<div class="bg-black">
 			<div class="row sec01-warp">
 				<div class="logo">
@@ -226,7 +216,7 @@
 					<h1>_공연</h1>
 					<p>다목적 홀과 야외 공연장에서 공연이 진행되고<br>공연과 자연이 어우러져 문화예술을 즐길 수 있습니다.</p>
 				</div>
-				<div class="show-img" data-aos="fade-left">
+				<div class="show-img" data-aos="fade-up">
 					<div class="slide_box1">
 						<ul>
 							<li><a href="#"><img src="images/show4.jpg" alt=""></a></li>
@@ -236,7 +226,7 @@
 				</div>
 			</div>
 			<div class="view">
-				<div class="view-img" data-aos="fade-right">
+				<div class="view-img" data-aos="fade-up">
 					<div class="slide_box2">
 						<ul>
 							<li><a href="#"><img src="images/show1.jpg" alt=""></a></li>
