--- a/onepage/index.html
+++ b/onepage/index.html
@@ -103,7 +103,7 @@
 									<p>블로그</p>
 								</div>
 								<div class="tab2-sub-txt">
-									<p>10:00 - 18:00 (월요일 휴관)</p>
+									<p>10:00 - 18:00 (월요일휴관)</p>
 									<p>https://yh63339.blog.me</p>
 								</div>
 							</div>
@@ -117,7 +117,7 @@
 								</div>
 								<div class="tab3-sub-txt">
 									<p>운영 시간</p>
-									<p>문의</p>
+									<p class="tab3-call">문의</p>
 								</div>
 								<div class="tab3-sub-txt">
 									<p>평일 10:30 - 19:30 주말 10:30 - 21:30</p>
