--- a/onepage/index.html
+++ b/onepage/index.html
@@ -62,7 +62,7 @@
 			<div class="text-warp">
 				<h1>한옥 마을</h1>
 				<p>한옥 숙박 체험, 한옥 꽃집 플레노, 한옥 카페 다인 등
-					여러가지 활동을 할 수 있습니다.</p>
+					<br>여러가지 활동을 할 수 있습니다.</p>
 			</div>
 			<div class="img-warp">
 				<div class="tab1-img" data-aos="fade-up">
@@ -139,59 +139,90 @@
 			<div class="gallery-img">
 				<div class="gallery-warp">
 					<div class="gallery-row">
-						<div class="gallery-img1">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img1">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img2">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img2">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img3">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img3">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img4">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img4">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
 					</div>
 					<div class="gallery-row">
-						<div class="gallery-img5">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img5">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img6">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img6">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img7">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img7">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img8">
-							<div class="gallery-bg"></div>
-						</div>
-					</div>
-					<div class="gallery-row click-row">
-						<div class="gallery-img9">
-							<div class="gallery-bg"></div>
-						</div>
-						<div class="gallery-img10">
-							<div class="gallery-bg"></div>
-						</div>
-						<div class="gallery-img11">
-							<div class="gallery-bg"></div>
-						</div>
-						<div class="gallery-img12">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img8">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
 					</div>
 					<div class="gallery-row click-row">
-						<div class="gallery-img13">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img9">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img14">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img10">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img15">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img11">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
-						<div class="gallery-img16">
-							<div class="gallery-bg"></div>
+						<div class="img-box">
+							<div class="gallery-img12">
+								<div class="gallery-bg"></div>
+							</div>
+						</div>
+					</div>
+					<div class="gallery-row click-row">
+						<div class="img-box">
+							<div class="gallery-img13">
+								<div class="gallery-bg"></div>
+							</div>
+						</div>
+						<div class="img-box">
+							<div class="gallery-img14">
+								<div class="gallery-bg"></div>
+							</div>
+						</div>
+						<div class="img-box">
+							<div class="gallery-img15">
+								<div class="gallery-bg"></div>
+							</div>
+						</div>
+						<div class="img-box">							<div class="gallery-img16">
+								<div class="gallery-bg"></div>
+							</div>
 						</div>
 					</div>
 					<!-- gallery row -->
