--- a/onepage/index.html
+++ b/onepage/index.html
@@ -220,7 +220,8 @@
 								<div class="gallery-bg"></div>
 							</div>
 						</div>
-						<div class="img-box">							<div class="gallery-img16">
+						<div class="img-box">							
+							<div class="gallery-img16">
 								<div class="gallery-bg"></div>
 							</div>
 						</div>
